improved logging for newInstanceSimple